[package]
name = "cosmic-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy = "0.3.1"
glam = "0.25.0"

[features]
default = ["tracing"]
tracing = ["comfy/tracy"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 1
